<resources>
    <string name="app_name">English Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_learn">Let\'s learn English!</string>
    <string name="questionNum">Вопрос (%1$d/%2$d)</string>
    <string name="submit_button">Submit</string>
    <string name="text_win">Умничка</string>
    <string name="text_lose">Не умеешь работать головой, работай ногами</string>
    <string name="accessibility_win">Smile!</string>
    <string name="accessibility_lose">Fuck</string>
    <string name="repeat">Закрепим результат?</string>
    <string name="try_again">Попробуем еще раз</string>

</resources>